기본 UI 컴포넌트 생성, theme 설정

--- a/android/Sara/app/src/main/res/values/strings.xml
+++ b/android/Sara/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Sara</string>
+
+    <string name="menu_home_name">홈</string>
+    <string name="menu_gallery_name">갤러리</string>
+    <string name="menu_my_name">마이</string>
+
 </resources>
