--- a/android/Sara/app/src/main/res/values/strings.xml
+++ b/android/Sara/app/src/main/res/values/strings.xml
@@ -5,4 +5,24 @@
     <string name="menu_gallery_name">갤러리</string>
     <string name="menu_my_name">마이</string>
 
+
+    <!-- Home -->
+    <string name="text_button_upload">이미지 업로드</string>
+    <string name="text_button_search">소스 이미지 찾기</string>
+    <string name="text_survey_desc">사라 써보니 어떤가요?\n서비스 개선을 위한 피드백을 남겨주세요!</string>
+
+    <!-- image upload -->
+    <string name="text_title_upload">Sara에게 요청하기</string>
+    <string name="text_upload_desc">텍스트 입력, 글 종류 선택 둘중 하나만 가능해요</string>
+    <string name="text_upload_hint">텍스트로 직접 요청하기</string>
+    <string name="title_chip1">작문</string>
+    <string name="title_chip2">시</string>
+    <string name="title_chip3">평가</string>
+
+    <!-- image result -->
+    <string name="text_title_result">Sara가 보낸 답장</string>
+    <string name="text_button_save">컬렉션에 저장하기</string>
+    <string name="text_button_recall">다시 쓰기</string>
+    <string name="text_button_share">공유하기</string>
+
 </resources>
