--- a/android/Sara/app/src/main/res/values/strings.xml
+++ b/android/Sara/app/src/main/res/values/strings.xml
@@ -40,13 +40,11 @@
     <string name="text_button_remove">삭제하기</string>
 
     <!-- my -->
-    <string name="text_menu_collection">내 보관함</string>
+    <string name="text_menu_collection">내가 만든 작품</string>
     <string name="text_menu_survey">유저설문</string>
     <string name="text_text_ver">앱 버전 1.0.1</string>
     <string name="text_text_ver_desc">최신버전이에요!</string>
     <string name="text_button_logout">로그아웃</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
